Fixed navbar on mobile and fixed some other stuff on mobile

--- a/custom/navbar.css
+++ b/custom/navbar.css
@@ -35,6 +35,14 @@
         padding-top: 2em;
         padding-bottom: 2em;
     }
+    #logo{
+        padding-top: 2em;
+        padding-bottom: 0;
+    }
+    .splash h1 strong{
+        margin-top: 3em;
+        font-size: 1.7em!important;
+    }
 
 }
 
@@ -42,11 +50,27 @@
     #white-logo{
         display: none!important;
     }
+    #logo{
+        padding-top: 2em;
+        padding-bottom: 0;
+    }
+    .splash h1{
+        margin-top: 3em;
+        font-size: 1.7em!important;
+    }
 }
 
 @media (max-width: 767px) {
     #white-logo{
         display: none!important;
+    }
+    #logo{
+        padding-top: 2em;
+        padding-bottom: 0;
+    }
+    .splash h1{
+        margin-top: 250px!important;
+        font-size: 1.7em!important;
     }
 }
 
@@ -64,6 +88,3 @@
 #footer-links div{
     display: inline-block;
 }
-/*#footer-links > *{
-    float: right;
-}*/
